--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
           على
           أكمل وجه، بما فيها التصليحات الأساسية وتركيب المعدات والأجهزة المعقدة. كما تتميز الشركه أيضاً بضمها طاقم عمل
           مميز يتسم بالود والمعاملة الحسنة.</p>
-        <a class="button" href="tel:0544711204">اتصل بنا الان</a>
+        <a class="button" href="tel:0544711204">0544711204</a>
       </div>
     </div>
   </section>
@@ -63,10 +63,12 @@
         <h5>شركة متخصصة فى صيانة التكييف والتبريد قسم خاص لصيانة الغسالات والثلاجات الأتوماتيك
           والتكييف واصلاح الأجهزة الكهربائيه</h5>
         <p>
-          شركة متنقلة متخصصة في عمليات وإصلاح الأجهزة الكهربائية والتكييف والتبريد في المنزل تقدم خدمات التصليح والصيانة
+          شركة متنقلة متخصصة في عمليات وإصلاح الأجهزة الكهربائية والتكييف والتبريد في المنزل تقدم خدمات التصليح
+          والصيانة
           للأجهزة الكهربائية المنزلية والتكييف والثلاجات والغسالات عن طريق فنيين مدربين وعلى أعلى مستوى من الإحترافية
           فنيون عرب خبراء في مجال الصيانة كما نعتمد صيانة الماركات العالمية من شركات سامسونج ، سونی ۔ یورک – شارب –
-          کاريير – جنرال – سوبر جنرال – ويوجد قطع غيار اصلية لجميع الماركات مكفولة بضمان الشركة تعمل على إرضاء متطلباتكم
+          کاريير – جنرال – سوبر جنرال – ويوجد قطع غيار اصلية لجميع الماركات مكفولة بضمان الشركة تعمل على إرضاء
+          متطلباتكم
           في أسرع وقت ممكن ونوصلك لباب البيت
         </p>
       </div>
@@ -85,8 +87,20 @@
           <p class="text-justify">
             شركة متنقلة متخصصة في عمليات وإصلاح الأجهزة الكهربائية والتكييف والتبريد في المنزل نقدم خدمات التصليح
             والصيانة
-            للأجهزة الكهربائية المنزلية والتكييف والثلاجات والغسالات عن طريق فنيين مدربين وعلى أعلى مستوى من الإحترافية
+            للأجهزة الكهربائية المنزلية والتكييف والثلاجات والغسالات عن طريق فنيين مدربين وعلى أعلى مستوى من
+            الإحترافية
           </p>
+          <hr>
+          <p style="text-align: center;font-size: 20px; color: rgb(12, 145, 179); font-weight: bold;">يمكنكم الاتصال
+            بنا
+            علي الارقام
+            التاليه : <a href="tel:0544711204">0544711204</a></p>
+          <div style="text-align: center; display: flex; align-items: center; justify-content: center;gap: 15px;">
+            <span><i class="fa-brands fa-facebook" style="color:rgb(43, 161, 240);font-size: 35px;"></i></span> <a
+              href="https://www.facebook.com/Safwet-Alkhbraa-Maintenance-101789549470839/">Facebook</a>
+            <span><i class="fa-brands fa-square-instagram" style="color: rgb(245, 76, 71); font-size: 35px;"></i></span>
+            <a href="https://www.instagram.com/ac_repairing_maintenance/?igshid=ZmZhODViOGI%3D">Instagram</a>
+          </div>
         </div>
 
         <div class="col-xs-6 col-md-3">
@@ -128,7 +142,9 @@
     </div>
   </footer>
   <div class="floating_btn">
-    <a target="_blank" href="https://wa.me/" aria-label="Read more about Seminole's new baby mayor">
+    <a target="_blank"
+      href="https://api.whatsapp.com/send?phone=0544711204&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+      aria-label="Read more about Seminole's new baby mayor">
       <div class="contact_icon">
         <i class="fa-brands fa-whatsapp"></i>
       </div>
@@ -154,5 +170,6 @@
     integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
     crossorigin="anonymous"></script>
 </body>
+
 
 </html>
