--- a/contact.html
+++ b/contact.html
@@ -80,9 +80,9 @@
       <div class="social">
         <span><i class="fa-solid fa-envelope"></i></span>
         <p>Atawil886@gmail.com</p>
-        <span><i class="fa-brands fa-facebook"></i></span> <a
+        <span><i class="fa-brands fa-facebook" style="color:rgb(43, 161, 240);"></i></span> <a
           href="https://www.facebook.com/Safwet-Alkhbraa-Maintenance-101789549470839/">Facebook</a>
-        <span><i class="fa-brands fa-square-instagram"></i></span> <a
+        <span><i class="fa-brands fa-square-instagram" style="color: rgb(245, 76, 71);"></i></span> <a
           href="https://www.instagram.com/ac_repairing_maintenance/?igshid=ZmZhODViOGI%3D">Instagram</a>
       </div>
     </div>
@@ -98,6 +98,16 @@
             والصيانة
             للأجهزة الكهربائية المنزلية والتكييف والثلاجات والغسالات عن طريق فنيين مدربين وعلى أعلى مستوى من الإحترافية
           </p>
+          <hr>
+          <p style="text-align: center;font-size: 20px; color: rgb(12, 145, 179); font-weight: bold;">يمكنكم الاتصال بنا
+            علي الارقام
+            التاليه : <a href="tel:0544711204">0544711204</a></p>
+          <div style="text-align: center; display: flex; align-items: center; justify-content: center;gap: 15px;">
+            <span><i class="fa-brands fa-facebook" style="color:rgb(43, 161, 240);font-size: 35px;"></i></span> <a
+              href="https://www.facebook.com/Safwet-Alkhbraa-Maintenance-101789549470839/">Facebook</a>
+            <span><i class="fa-brands fa-square-instagram" style="color: rgb(245, 76, 71); font-size: 35px;"></i></span>
+            <a href="https://www.instagram.com/ac_repairing_maintenance/?igshid=ZmZhODViOGI%3D">Instagram</a>
+          </div>
         </div>
 
         <div class="col-xs-6 col-md-3">
@@ -139,7 +149,9 @@
     </div>
   </footer>
   <div class="floating_btn">
-    <a target="_blank" href="https://wa.me/" aria-label="Read more about Seminole's new baby mayor">
+    <a target="_blank"
+      href="https://api.whatsapp.com/send?phone=0544711204&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+      aria-label="Read more about Seminole's new baby mayor">
       <div class="contact_icon">
         <i class="fa-brands fa-whatsapp"></i>
       </div>
@@ -165,5 +177,7 @@
     integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
     crossorigin="anonymous"></script>
 </body>
+
+
 
 </html>
