--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h1>خدمة صيانة صقر الغانم</h1>
       <p>نستخدم احدث الامكانيات الموجوده بالاسواق والتكنولوجيا العاليه في صيانة التكيفات و صيانة الثلاجات و صيانة
         الغسالات و صيانة الاجهزة المنزلية الاخرى فنحن نتميز عن غيرنا كثيرا لاننا اول خبراء فى صيانة الاجهزة المنزلية</p>
-      <a href="tel:0544711204" class="contact">اتصل بنا الان</a>
+      <a href="tel:0544711204" class="contact">0544711204</a>
     </div>
 
   </section>
@@ -163,6 +163,17 @@
             والصيانة
             للأجهزة الكهربائية المنزلية والتكييف والثلاجات والغسالات عن طريق فنيين مدربين وعلى أعلى مستوى من الإحترافية
           </p>
+          <hr>
+          <p style="text-align: center;font-size: 20px; color: rgb(12, 145, 179); font-weight: bold;">يمكنكم الاتصال بنا
+            علي الارقام
+            التاليه : <a href="tel:0544711204">0544711204</a></p>
+          <div style="text-align: center; display: flex; align-items: center; justify-content: center;gap: 15px;">
+            <span><i class="fa-brands fa-facebook" style="color:rgb(43, 161, 240);font-size: 35px;"></i></span> <a
+              href="https://www.facebook.com/Safwet-Alkhbraa-Maintenance-101789549470839/">Facebook</a>
+            <span><i class="fa-brands fa-square-instagram" style="color: rgb(245, 76, 71); font-size: 35px;"></i></span>
+            <a href="https://www.instagram.com/ac_repairing_maintenance/?igshid=ZmZhODViOGI%3D">Instagram</a>
+          </div>
+
         </div>
 
         <div class="col-xs-6 col-md-3">
@@ -205,7 +216,9 @@
     </div>
   </footer>
   <div class="floating_btn">
-    <a target="_blank" href="https://wa.me/" aria-label="Read more about Seminole's new baby mayor">
+    <a target="_blank"
+      href="https://api.whatsapp.com/send?phone=0544711204&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+      aria-label="Read more about Seminole's new baby mayor">
       <div class="contact_icon">
         <i class="fa-brands fa-whatsapp"></i>
       </div>
@@ -231,5 +244,7 @@
     integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
     crossorigin="anonymous"></script>
 </body>
+
+
 
 </html>
