--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
   </footer>
   <div class="floating_btn">
     <a target="_blank"
-      href="https://api.whatsapp.com/send?phone=00971544711204&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+      href="https://api.whatsapp.com/send?phone=+971544711204&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
       aria-label="Read more about Seminole's new baby mayor">
       <div class="contact_icon">
         <i class="fa-brands fa-whatsapp"></i>
