--- a/serv.html
+++ b/serv.html
@@ -12,7 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Tajawal:wght@400;500;700&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+  <link rel="stylesheet" href="https://cdn.jsdelivr.XYZ/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/about.css">
   <link rel="stylesheet" href="css/index.css">
@@ -52,7 +52,7 @@
           على
           أكمل وجه، بما فيها التصليحات الأساسية وتركيب المعدات والأجهزة المعقدة. كما تتميز الشركه أيضاً بضمها طاقم عمل
           مميز يتسم بالود والمعاملة الحسنة.</p>
-        <a class="button" href="tel:00971509690322">00971509690322</a>
+        <a class="button" href="tel:009710559300876">009710559300876</a>
       </div>
     </div>
   </section>
@@ -71,7 +71,7 @@
             <p class="card-text">صقر الغانم تقدم افضل خدمه صيانه للتكييفات بواسطه افضل الخبراء والفنيين مع أفضل جوده
               وأقل تكاليف كما تقدم دعم وتفتيشعن الاعطال سنويا </p>
 
-            <a class="btn btn-block card-btn" href="tel:0544711204">اتصل بنا الان</a>
+            <a class="btn btn-block card-btn" href="tel:0559300876">اتصل بنا الان</a>
           </div>
         </div>
       </li>
@@ -85,7 +85,7 @@
               باعلى جودة و كفاءة منقطعة النظير و معدات صيانة صقر الغانم توفر على العملاء الجهد و الوقت و المال لإتمام
               عملية
               الصيانة بامتياز</p>
-            <a class="btn btn-block card-btn" href="tel:0544711204">اتصل بنا الان</a>
+            <a class="btn btn-block card-btn" href="tel:0559300876">اتصل بنا الان</a>
 
           </div>
         </div>
@@ -101,7 +101,7 @@
               بالضمان وفريق عمل من المهنيين والمهندسين المدربين على أعلى مستوى للتعامل مع كافة أنواع الثلاجات
 
             </p>
-            <a class="btn btn-block card-btn" href="tel:0544711204">اتصل بنا الان</a>
+            <a class="btn btn-block card-btn" href="tel:0559300876">اتصل بنا الان</a>
 
           </div>
         </div>
@@ -116,7 +116,7 @@
               لهؤلاء الفنيين أحدث المعدات وذلك للقيام بصيانة البوتاجاز على أفضل نحو وبأسرع وقت وأعلى جودة
 
             </p>
-            <a class="btn btn-block card-btn" href="tel:0544711204">اتصل بنا الان</a>
+            <a class="btn btn-block card-btn" href="tel:0559300876">اتصل بنا الان</a>
 
           </div>
         </div>
@@ -133,7 +133,7 @@
 
 
             </p>
-            <a class="btn btn-block card-btn" href="tel:0544711204">اتصل بنا الان</a>
+            <a class="btn btn-block card-btn" href="tel:0559300876">اتصل بنا الان</a>
 
           </div>
         </div>
@@ -149,7 +149,7 @@
               <br>
               مثل الشاشات والسخانات والميكرويف وجميع الاجهزة الكهربائيه
             </p>
-            <a class="btn btn-block card-btn" href="tel:0544711204">اتصل بنا الان</a>
+            <a class="btn btn-block card-btn" href="tel:0559300876">اتصل بنا الان</a>
 
           </div>
         </div>
@@ -180,7 +180,7 @@
           <hr>
           <p style="text-align: center;font-size: 20px; color: rgb(12, 145, 179); font-weight: bold;">يمكنكم الاتصال بنا
             علي الارقام
-            التاليه : <a href="tel:00971509690322">00971509690322</a></p>
+            التاليه : <a href="tel:009710559300876">009710559300876</a></p>
           <div style="text-align: center; display: flex; align-items: center; justify-content: center;gap: 15px;">
             <span><i class="fa-brands fa-facebook" style="color:rgb(43, 161, 240);font-size: 35px;"></i></span> <a
               href="https://www.facebook.com/Safwet-Alkhbraa-Maintenance-101789549470839/">Facebook</a>
@@ -246,13 +246,13 @@
     <p class="text_icon">اتصل بنا</p>
   </div>
   <script src="index.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+  <script src="https://cdn.jsdelivr.XYZ/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  <script src="https://cdn.jsdelivr.XYZ/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+  <script src="https://cdn.jsdelivr.XYZ/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
     integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
     crossorigin="anonymous"></script>
 
