--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Tajawal:wght@400;500;700&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+  <link rel="stylesheet" href="https://cdn.jsdelivr.XYZ/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/about.css">
   <link rel="stylesheet" href="css/index.css">
@@ -49,7 +49,7 @@
           على
           أكمل وجه، بما فيها التصليحات الأساسية وتركيب المعدات والأجهزة المعقدة. كما تتميز الشركه أيضاً بضمها طاقم عمل
           مميز يتسم بالود والمعاملة الحسنة.</p>
-        <a class="button" href="tel:00971509690322">00971509690322</a>
+        <a class="button" href="tel:009710559300876">009710559300876</a>
       </div>
     </div>
   </section>
@@ -76,7 +76,7 @@
   </section>
   <section class="call">
     <div class="calling">
-      <h2>يمكنكم التواصل معنا علي الرقم التالي : <a href="tel:00971509690322">00971509690322</a></h2>
+      <h2>يمكنكم التواصل معنا علي الرقم التالي : <a href="tel:009710559300876">009710559300876</a></h2>
     </div>
   </section>
   <footer class="site-footer">
@@ -94,7 +94,7 @@
           <p style="text-align: center;font-size: 20px; color: rgb(12, 145, 179); font-weight: bold;">يمكنكم الاتصال
             بنا
             علي الارقام
-            التاليه : <a href="tel:00971509690322">00971509690322</a></p>
+            التاليه : <a href="tel:009710559300876">009710559300876</a></p>
           <div style="text-align: center; display: flex; align-items: center; justify-content: center;gap: 15px;">
             <span><i class="fa-brands fa-facebook" style="color:rgb(43, 161, 240);font-size: 35px;"></i></span> <a
               href="https://www.facebook.com/Safwet-Alkhbraa-Maintenance-101789549470839/">Facebook</a>
@@ -143,7 +143,7 @@
   </footer>
   <div class="floating_btn">
     <a target="_blank"
-      href="https://api.whatsapp.com/send?phone=+971509690322&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
+      href="https://api.whatsapp.com/send?phone=+9710559300876&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202."
       aria-label="Read more about Seminole's new baby mayor">
       <div class="contact_icon">
         <i class="fa-brands fa-whatsapp"></i>
@@ -152,7 +152,7 @@
     <p class="text_icon">تواصل معنا</p>
   </div>
   <div class="float">
-    <a href="tel:00971509690322" aria-label="Read more about Seminole's new baby mayor">
+    <a href="tel:009710559300876" aria-label="Read more about Seminole's new baby mayor">
       <div class="contact-1">
         <i class="fa-solid fa-phone"></i>
       </div>
@@ -160,13 +160,13 @@
     <p class="text_icon">اتصل بنا</p>
   </div>
   <script src="index.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+  <script src="https://cdn.jsdelivr.XYZ/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  <script src="https://cdn.jsdelivr.XYZ/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
     crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
+  <script src="https://cdn.jsdelivr.XYZ/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
     integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+"
     crossorigin="anonymous"></script>
 </body>
